# tpRigToolkit-libs-spaceswitcher

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_general.py
tpRigToolkit/libs/spaceswitcher/: __logging__.ini  __version__.py  _version.py
tpRigToolkit/libs/spaceswitcher/core/: consts.py  spaceswitchlib.py
tpRigToolkit/libs/spaceswitcher/dccs/maya/: spaceswitchlib.py
