[metadata]
name = tpRigToolkit-libs-spaceswitcher
description = Library that contains library to create space switch setups
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-libs-spaceswitcher

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    tpRigToolkit-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpRigToolkit/libs/spaceswitcher/_version.py
versionfile_build = tpRigToolkit/libs/spaceswitcher/_version.py
tag_prefix =
parentdir_prefix =